# get-price-usdt

./: .gitlab-ci.yml  Dockerfile  README copy.md  README.md  main.py  pyproject.toml  requirements.txt  scheduler.py
config/: config_all.py  okx_signature.py  times.py
database/: connection.py  get_data.py  update_price.py
deployment/prod/: deployment.yaml  kustomization.yaml
exchange/: gp_binance_th.py  gp_binance_thb.py  gp_binance_vnd.py  gp_bitkub.py  gp_googlefi.py  gp_innovestx.py  gp_okx.py  gp_xs.py  gp_z.py
helper/: filter_avg_price.py  filter_price.py  json_obj.py  logger.py
